Add card position info to Nord theme
Display card position (e.g., "Card 42 of 156") in bottom status bar
alongside tags. Uses flexbox layout with tags on left (wrappable) and
card info on right (fixed, no-wrap).

--- a/src/styles/css/nord-showcase.html
+++ b/src/styles/css/nord-showcase.html
@@ -114,13 +114,21 @@
       </p>
     </div>
 
-    <!-- Tags -->
-    <div class="prettify-tags">
-      <span class="prettify-tag">vocabulary</span>
-      <span class="prettify-tag">beginner</span>
-      <span class="prettify-tag">chapter-1</span>
-      <span class="prettify-tag">important</span>
-      <span class="prettify-tag">review-daily</span>
+    <!-- Bottom status container -->
+    <div class="prettify-bottom-status">
+      <!-- Tags -->
+      <div class="prettify-tags">
+        <span class="prettify-tag">vocabulary</span>
+        <span class="prettify-tag">beginner</span>
+        <span class="prettify-tag">chapter-1</span>
+        <span class="prettify-tag">important</span>
+        <span class="prettify-tag">review-daily</span>
+      </div>
+
+      <!-- Card info -->
+      <div class="prettify-card-info">
+        <span>Card 42 of 156</span>
+      </div>
     </div>
   </div>
 
