add bottom status to all cards

--- a/src/styles/css/nord-showcase.html
+++ b/src/styles/css/nord-showcase.html
@@ -127,7 +127,7 @@
 
       <!-- Card info -->
       <div class="prettify-card-info">
-        <span>Card 42 of 156</span>
+        <span>r={{info-Reviews:}} l={{info-Lapses:}}</span>
       </div>
     </div>
   </div>
