Add hint toggle functionality for vocabulary cards
Implement hint toggle system for card-type-2 (normal cards):
- Add .hint-toggle class to link in Vocabulary/Forward
- Add click handler in common_epilog.html to toggle .show-hint class
- Add CSS rules to show/hide hint button and image field based on state
- Compile and sync Nord theme CSS to catalog-export

--- a/catalog-export/common_epilog.html
+++ b/catalog-export/common_epilog.html
@@ -36,3 +36,12 @@
   });
   deckEl.innerHTML = html.join("&nbsp;/&nbsp;");
 </script>
+
+<script>
+  // Hint toggle functionality
+  document.querySelectorAll('.hint-toggle').forEach(function(toggle) {
+    toggle.addEventListener('click', function() {
+      this.closest('.hint-container').classList.add('show-hint');
+    });
+  });
+</script>
